<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_gap_color">
        <LinearLayout
            android:id="@+id/pre_order"
            android:layout_width="1dp"
            android:layout_height="114dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/bt_shape_bg_selector"
            android:layout_marginRight="0.5px"
            android:layout_marginBottom="1px"
            android:layout_span="3">
            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@mipmap/ico_yyyz"
                android:scaleType="fitXY" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/middle_word_size"
                android:layout_marginTop="10dp"
                android:text="@string/home_yuyue"
                android:textColor="@color/home_item_text_color"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="114dp"
            android:layout_marginLeft="0.5px"
            android:orientation="vertical"
            android:layout_marginBottom="0.5px"
            android:layout_span="3"
            android:weightSum="2">
            <LinearLayout
                android:id="@+id/hou_zhen"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bt_shape_bg_selector"
                android:layout_marginBottom="0.5px"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/ico_dyhz"
                    android:scaleType="fitXY" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_houzhen"
                    android:textSize="@dimen/middle_word_size"
                    android:layout_marginLeft="13dp"
                    android:textColor="@color/home_item_text_color"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@id/home_check_project"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bt_shape_bg_selector"
                android:layout_weight="1"
                android:layout_marginTop="0.5px"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/ico_jc"
                    android:scaleType="fitXY" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_jiancha"
                    android:textSize="@dimen/middle_word_size"
                    android:layout_marginLeft="13dp"
                    android:textColor="@color/home_item_text_color"
                    />
            </LinearLayout>
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_gap_color"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:id="@id/fragment_home_medical"
            android:layout_width="1dp"
            android:layout_height="57dp"
            android:gravity="center"
            android:background="@drawable/bt_shape_bg_selector"
            android:layout_marginTop="1px"
            android:layout_marginLeft="0.5px"
            android:layout_marginRight="0.5px"
            android:layout_span="3">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@mipmap/ico_zyll"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/home_item_text_color"
                android:textSize="@dimen/small_word_size"
                android:text="@string/home_zy"
                android:layout_marginLeft="8dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@id/fragment_home_healthy"
            android:layout_width="1dp"
            android:layout_height="57dp"
            android:gravity="center"
            android:background="@drawable/bt_shape_bg_selector"
            android:layout_marginTop="1px"
            android:layout_marginLeft="0.5px"
            android:layout_span="3">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@mipmap/ico_xlzx"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/home_item_text_color"
                android:textSize="@dimen/small_word_size"
                android:text="@string/home_xl"
                android:layout_marginLeft="8dp"
                />
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_gap_color">
        <LinearLayout
            android:id="@id/fragment_home_export_repeat"
            android:layout_width="1dp"
            android:layout_height="57dp"
            android:gravity="center"
            android:background="@drawable/bt_shape_bg_selector"
            android:layout_marginTop="1px"
            android:layout_marginBottom="1px"
            android:layout_marginRight="0.5px"
            android:layout_span="2">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@mipmap/ico_fz"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/home_item_text_color"
                android:textSize="@dimen/small_word_size"
                android:text="@string/home_fz"
                android:layout_marginLeft="8dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@id/fragment_home_export_doctor"
            android:layout_width="1dp"
            android:layout_height="57dp"
            android:gravity="center"
            android:background="@drawable/bt_shape_bg_selector"
            android:layout_marginTop="1px"
            android:layout_marginLeft="0.5px"
            android:layout_marginRight="0.5px"
            android:layout_span="2">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@mipmap/ico_zjys"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/home_item_text_color"
                android:textSize="@dimen/small_word_size"
                android:text="@string/home_zj"
                android:layout_marginLeft="8dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@id/fragment_home_healthy_line"
            android:layout_width="1dp"
            android:layout_height="57dp"
            android:gravity="center"
            android:background="@drawable/bt_shape_bg_selector"
            android:layout_marginTop="1px"
            android:layout_marginLeft="0.5px"
            android:layout_span="2">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@mipmap/ico_jkxx"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/home_item_text_color"
                android:textSize="@dimen/small_word_size"
                android:text="@string/home_jk"
                android:layout_marginLeft="8dp"
                />
        </LinearLayout>
    </TableRow>

</TableLayout>